tests/type_errors/sort_func_bool.nos
# expect_error: does not implement Ord
main() = sort([true, false, true])
